MODIFY Modified synthesis abstraction.